# ft_vox

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
binary/private/: ft_vox.cpp
libraries/args/: CMakeLists.txt
libraries/args/private/: ArgsParsing.cpp
libraries/args/public/: ArgsParsing.hpp
libraries/binome/: CMakeLists.txt
libraries/binome/private/: Perlin.cpp
libraries/binome/public/: Perlin.hpp
libraries/chunk/: CMakeLists.txt
libraries/chunk/private/: Chunk.cpp  Chunk.hpp  ChunkDataStructures.hpp  ChunkManager.cpp
libraries/chunk/public/: Chunk.hpp  ChunkDataStructures.hpp  ChunkManager.hpp  ChunkShaderDataStructure.hpp
libraries/engine/: CMakeLists.txt
libraries/engine/private/: Camera.cpp  Engine.cpp  EventHandler.cpp  Font.cpp  TestBoxDrawer.cpp
libraries/engine/public/: Camera.hpp  Engine.hpp  EventHandler.hpp  Font.hpp  Perspective.hpp  TestBoxDrawer.hpp
libraries/gl_objects/: CMakeLists.txt
libraries/gl_objects/private/: GLFont.cpp  GLShader.cpp  GLTexture.cpp  GLTexture2D.cpp
libraries/gl_objects/public/: GLFont.hpp  GLShader.hpp  GLTexture.hpp  GLTexture2D.hpp
libraries/io_manager/: CMakeLists.txt
libraries/io_manager/private/: IOManager.cpp
libraries/io_manager/public/: IOEvents.hpp  IOManager.hpp
libraries/noise/: CMakeLists.txt
libraries/noise/private/: NoiseUtils.cpp  PerlinNoise.cpp
libraries/noise/public/: NoiseUtils.hpp  PerlinNoise.hpp
libraries/skybox/: CMakeLists.txt
libraries/skybox/private/: Skybox.cpp
libraries/skybox/public/: Skybox.hpp
libraries/ui/: CMakeLists.txt
libraries/ui/private/: Cursor.cpp  Font.cpp  Ui.cpp  UiFont.cpp  UiTexture.cpp
libraries/ui/public/: Cursor.hpp  Font.hpp  Ui.hpp  UiFont.hpp  UiTexture.hpp
libraries/window_manager/: CMakeLists.txt
libraries/window_manager/private/: WindowManager.cpp
libraries/window_manager/public/: WindowManager.hpp
ressources/shaders/chunk/: chunk_gs.glsl  chunk_vs.glsl
ressources/shaders/cursor/: cursor_fs.glsl
ressources/shaders/font/: font_vs.glsl
ressources/shaders/skybox/: skybox_fs.glsl  skybox_gs.glsl  skybox_vs.glsl
ressources/shaders/test_box_drawer/: test_bd_fs.glsl  test_bd_gs.glsl  test_bd_vs.glsl
ressources/shaders/textured_chunk/: textured_chunk_fs.glsl  textured_chunk_gs.glsl  textured_chunk_vs.glsl
ressources/shaders/textured_chunk_v2/: textured_chunk_v2_fs.glsl  textured_chunk_v2_vs.glsl
ressources/shaders/ui_texture/: ui_texture_fs.glsl
